<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/touming80"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/tv_voice_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/voice_setting_ansering"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_voice_recoding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voice_seting_recording"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_voice_greeting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/voice_seting_greeting"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv_voice_user_voice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/voice_seting_user"/>
    </LinearLayout>

</LinearLayout>