<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voicemil_voicemil"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:id="@+id/ly_message"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voicemil_message"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_message_setting"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voicemil_Setting"/>
    </LinearLayout>

</LinearLayout>