<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/touming80"
    android:padding="15dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voice_user_voice"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/framly_voice"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
           android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voice_seting_recoding_string"/>
        <TextView
            android:layout_gravity="bottom"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="[保留]stop"/>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/ly_voice_user_recoding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sanjiao"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voice_seting_uservice_Recoding"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ly_voice_user_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sanjiao"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voice_seting_uservice_play"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ly_voice_user_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sanjiao"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/voice_seting_uservice_delete"/>
    </LinearLayout>
</LinearLayout>