<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/touming80"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="@string/voice_seting_uservice_Greeting"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sanjiao"/>
        <TextView
            android:id="@+id/tv_voice_yes"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:text="@string/voice_seting_uservice_Greeting_yes"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sanjiao"/>
            <TextView
                android:id="@+id/tv_voice_no"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:text="@string/voice_seting_uservice_Greeting_no"/>
    </LinearLayout>
</LinearLayout>